0.3
- (functionality)  implemented possibility to user to add series to his collection
- (functionality)  added charts on page with collection
- (functionality)  implemented sending of mail with activation key
- (functionality)  added stats about stamps/series/categories/countries on index page
- (functionality)  added list of recently added series on index page
- (functionality)  added list of last created collections on index page
- (functionality)  added categories to series
- (functionality)  implemented ability to specify series price by different catalogs
- (functionality)  added fields with day/month of release of series
- (functionality)  added localization support for countries
- (functionality)  show special error page when exception occurs
- (functionality)  save images to the disk
- (user interface) ported to Bootstrap
- (search engines) robots.txt file has been added
- (search engines) added human readable URLs for countries, categories and collections
- (integration)    added continuous building on TravisCI service
- (integration)    enabled posting of code coverage to coveralls.io service
- (infrastructure) Liquibase is used for database migrations
- (infrastructure) switched to Java7
- (infrastructure) views has been ported from JSP to Thymeleaf
- (infrastructure) started using feature flags with Togglz
- (infrastructure) ported unit tests to Spock Framework
- (infrastructure) use JaCoCo for code coverage (instead of Cobertura)
- (infrastructure) added checking by PMD

0.2
- implemented ability to add series
- use some new elements from HTML5
- purge unactivated registration requests
- deleted /site/maintenance and /password/restore pages
- introduced Spring Security support
- ported DAO layer to use Spring-Data
- ported unit and functional tests to TestNG
- migrated from HSQL to H2 (in test environment)

0.1.3
- implemented ability to add countries
- ported to use JSR-303 validation
- functional tests now uses FEST's assertions