@@ -17,6 +17,7 @@
 		<selenium.version>2.43.1</selenium.version>
 		<subethasmtp.version>3.1.7</subethasmtp.version>
 		<slf4j.version>1.7.9</slf4j.version>
+		<logback.version>1.1.0</logback.version>
 		<spring.version>4.1.4.RELEASE</spring.version>
 		<spring.data.version>1.6.4.RELEASE</spring.data.version>
 		<spring.security.version>3.2.5.RELEASE</spring.security.version>
@@ -443,9 +444,9 @@
 		</dependency>
 		
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>${slf4j.version}</version>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${logback.version}</version>
 			<scope>runtime</scope>
 		</dependency>
 		
