@@ -1,1 +1,0 @@
-log4j.rootLogger = OFF
